# python-ai-playground

./: .gitignore  README.md  pyproject.toml
src/: ollama-example.py  tools.py
tests/: test_ollama_example.py  test_ollama_integration.py
