[project]
name = "python-ai-playground"
version = "0.1.0"
description = "A playground for Python AI projects"
authors = [
    {name = "Your Name", email = "you@example.com"},
]
dependencies = [
    "litellm>=1.0.0",
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-mock>=3.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

